--- a/PostSafety/PostSafety/Storyboards/User.storyboard
+++ b/PostSafety/PostSafety/Storyboards/User.storyboard
@@ -794,7 +794,7 @@
                                 <rect key="frame" x="0.0" y="246" width="414" height="490"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AnnouncementCell" rowHeight="142" id="tLr-CQ-ICL" customClass="PSFeedTableViewCell" customModule="PostSafety" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AnnouncementCell" rowHeight="142" id="tLr-CQ-ICL" customClass="PSFeedTableViewCell" customModule="PostSafety" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="142"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tLr-CQ-ICL" id="eKJ-CT-Ije">
@@ -1231,8 +1231,12 @@
                                 </constraints>
                                 <state key="normal" image="menu"/>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="FDZ-p1-1uA">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="FDZ-p1-1uA">
                                 <rect key="frame" x="24" y="141.99999999999997" width="366" height="294.33333333333326"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="6GR-cN-lNf" appends="YES" id="gNu-X9-5RM"/>
+                                </connections>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UMx-XE-MvK">
                                 <rect key="frame" x="24" y="456.33333333333331" width="366" height="44"/>
@@ -1435,6 +1439,11 @@
                 <tapGestureRecognizer id="Uvj-8B-8bM">
                     <connections>
                         <action selector="playVideoGestureTapped:" destination="KTp-hF-yJE" id="LR0-en-Sr9"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="6GR-cN-lNf">
+                    <connections>
+                        <action selector="enlargeAttachmentGestureTapped:" destination="KTp-hF-yJE" id="yaU-2U-YGE"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
@@ -1727,7 +1736,7 @@
                                 <rect key="frame" x="0.0" y="142" width="414" height="594"/>
                                 <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="DefinitionsCell" rowHeight="100" id="Qjn-YO-wnK" customClass="PSFeedTableViewCell" customModule="PostSafety" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="DefinitionsCell" rowHeight="100" id="Qjn-YO-wnK" customClass="PSFeedTableViewCell" customModule="PostSafety" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qjn-YO-wnK" id="HQN-KA-xgm">
@@ -1804,6 +1813,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="42k-E7-dWz" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3238" y="110"/>
+        </scene>
+        <!--Posted Report Attachment View Controller-->
+        <scene sceneID="lxV-DT-n2K">
+            <objects>
+                <viewController storyboardIdentifier="PSPostedReportAttachmentViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="6ZF-BV-IdC" customClass="PSPostedReportAttachmentViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="C6G-GK-wtS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.69999998807907104" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M7O-tR-hhv" userLabel="Nav Bar">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="64"/>
+                                <subviews>
+                                    <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dFy-1d-IXK">
+                                        <rect key="frame" x="142" y="20" width="130.66666666666663" height="44"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dashboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GPK-dv-CEb">
+                                                <rect key="frame" x="16.000000000000007" y="10.666666666666668" width="98.666666666666686" height="24.000000000000004"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.78823529410000004" green="0.78823529410000004" blue="0.78823529410000004" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="GPK-dv-CEb" firstAttribute="leading" secondItem="dFy-1d-IXK" secondAttribute="leading" constant="16" id="ave-AJ-RvJ"/>
+                                            <constraint firstItem="GPK-dv-CEb" firstAttribute="centerY" secondItem="dFy-1d-IXK" secondAttribute="centerY" id="uz0-Ql-j2O"/>
+                                            <constraint firstAttribute="trailing" secondItem="GPK-dv-CEb" secondAttribute="trailing" constant="16" id="zey-s0-4u0"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="dFy-1d-IXK" secondAttribute="bottom" id="0HA-1D-LpF"/>
+                                    <constraint firstItem="dFy-1d-IXK" firstAttribute="top" secondItem="M7O-tR-hhv" secondAttribute="top" constant="20" id="KR5-kN-egr"/>
+                                    <constraint firstAttribute="height" constant="64" id="Uqr-5y-2xb"/>
+                                    <constraint firstItem="dFy-1d-IXK" firstAttribute="centerX" secondItem="M7O-tR-hhv" secondAttribute="centerX" id="bMq-DK-ERw"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Jc-rg-xuP">
+                                <rect key="frame" x="0.0" y="20" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="7JE-2j-CcF"/>
+                                    <constraint firstAttribute="width" secondItem="3Jc-rg-xuP" secondAttribute="height" id="p6h-ZN-fGs"/>
+                                </constraints>
+                                <state key="normal" image="back"/>
+                                <connections>
+                                    <action selector="backButtonTouched:" destination="6ZF-BV-IdC" eventType="touchUpInside" id="C4b-lZ-JIu"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="Dlv-Gp-XOM">
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="M7O-tR-hhv" firstAttribute="leading" secondItem="C6G-GK-wtS" secondAttribute="leading" id="2op-fD-gGe"/>
+                            <constraint firstItem="Dlv-Gp-XOM" firstAttribute="top" secondItem="M7O-tR-hhv" secondAttribute="bottom" id="3DD-lt-kbM"/>
+                            <constraint firstItem="Dlv-Gp-XOM" firstAttribute="leading" secondItem="WVl-3m-7lB" secondAttribute="leading" id="6Cc-z7-Gsa"/>
+                            <constraint firstItem="WVl-3m-7lB" firstAttribute="trailing" secondItem="Dlv-Gp-XOM" secondAttribute="trailing" id="DCD-2l-bNe"/>
+                            <constraint firstItem="3Jc-rg-xuP" firstAttribute="bottom" secondItem="M7O-tR-hhv" secondAttribute="bottom" id="PIJ-rr-ME0"/>
+                            <constraint firstItem="WVl-3m-7lB" firstAttribute="bottom" secondItem="Dlv-Gp-XOM" secondAttribute="bottom" id="VzX-mA-ckP"/>
+                            <constraint firstItem="WVl-3m-7lB" firstAttribute="trailing" secondItem="M7O-tR-hhv" secondAttribute="trailing" id="fb6-YW-CH4"/>
+                            <constraint firstItem="M7O-tR-hhv" firstAttribute="top" secondItem="C6G-GK-wtS" secondAttribute="top" id="jbo-1K-aqU"/>
+                            <constraint firstItem="3Jc-rg-xuP" firstAttribute="leading" secondItem="M7O-tR-hhv" secondAttribute="leading" id="xzf-xV-lPN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="WVl-3m-7lB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="jjq-w3-JyU"/>
+                    <connections>
+                        <outlet property="attachmentImageVIew" destination="Dlv-Gp-XOM" id="F6k-zu-z89"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cmO-AQ-ziT" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4070" y="958"/>
         </scene>
     </scenes>
     <resources>
